plugins {
	id 'fabric-loom' version "${loom_version}"
	id 'maven-publish'
}

loom {
	// accessWidenerPath = file("src/main/resources/midiblock.accesswidener")
}

version = project.mod_version
group = project.maven_group

base {
	archivesName = project.archives_base_name
}

repositories {
	maven {
        url 'https://jitpack.io'
    }

    maven {
        name = "Terraformers"
        url = "https://maven.terraformersmc.com/"
    }

    maven {
        url = 'https://maven.fallenbreath.me/releases'
    }
    maven {
        url = "https://masa.dy.fi/maven/sakura-ryoko"
    }
}

dependencies {
	// To change the versions see the gradle.properties file
	minecraft "com.mojang:minecraft:${project.minecraft_version}"
	modImplementation "net.fabricmc:fabric-loader:${project.loader_version}"

	modImplementation "net.fabricmc.fabric-api:fabric-api:${project.fabric_api_version}"

    modCompileOnly("com.terraformersmc:modmenu:${project.modmenu_version}")

    modImplementation("com.github.sakura-ryoko:malilib:${project.malilib_version}")
    modImplementation("com.github.sakura-ryoko:litematica:${project.litematica_version}")
    include(implementation("me.fallenbreath:conditional-mixin-fabric:${project.conditionalmixin_version}"))

    mappings loom.officialMojangMappings()

    // Tests
	testImplementation 'org.junit.jupiter:junit-jupiter-api:5.9.2'
	testRuntimeOnly 'org.junit.jupiter:junit-jupiter-engine:5.9.2'
	testRuntimeOnly 'org.junit.platform:junit-platform-launcher:1.9.2'
	testImplementation 'org.mockito:mockito-core:5.2.0'
	testImplementation 'org.mockito:mockito-junit-jupiter:5.2.0'
}

processResources {
	inputs.property "version", project.version

	filesMatching("fabric.mod.json") {
		expand "version": project.version
	}
}

test {
	useJUnitPlatform()
    testLogging {
        events "passed", "skipped", "failed", "standardOut", "standardError"
    }
}

tasks.withType(JavaCompile).configureEach {
	it.options.release = 21
}

java {
	withSourcesJar()

	sourceCompatibility = JavaVersion.VERSION_21
	targetCompatibility = JavaVersion.VERSION_21
}

jar {
	from("LICENSE") {
		rename { "${it}_${project.base.archivesName.get()}"}
	}
}

publishing {
	publications {
		create("mavenJava", MavenPublication) {
			from components.java
		}
	}

	// See https://docs.gradle.org/current/userguide/publishing_maven.html for information on how to set up publishing.
	repositories {

	}
}